--- a/index.html
+++ b/index.html
@@ -323,16 +323,6 @@
         <h3>Šalát<br>Lettuce</h3>
         <p>Svieži a chrumkavý, plný vitality.</p>
       </div>
-      <div class="microgreen-card" data-modal="Pestrec mariánsky-modal">
-        <img src="otaznik.jpg" alt="Pestrec mariánsky">
-        <h3>Pestrec mariánsky<br>Milk Thistle</h3>
-        <p>Jemne horký a zemito orieškový.</p>
-      </div>
-      <div class="microgreen-card" data-modal="???-modal">
-        <img src="otaznik.jpg" alt="Chystáme novú mikrozeleninku">
-        <h3>Už čoskoro</h3>
-        <p>:)</p>
-      </div>
 
       <!-- Nové produkty -->
       <div class="microgreen-card" data-modal="Čínska kapusta-modal">
@@ -340,10 +330,10 @@
         <h3>Čínska kapusta<br>Pak Choi</h3>
         <p>Jemne korenistá a chrumkavá, s osviežujúcou chuťou.</p>
       </div>
-      <div class="microgreen-card" data-modal="novy2-modal">
-        <img src="novy2.jpg" alt="Nový produkt 2">
-        <h3>Nový produkt 2</h3>
-        <p>Krátky popis produktu 2.</p>
+      <div class="microgreen-card" data-modal="Pestrec mariánsky-modal">
+        <img src="novy2.jpg" alt="Pestrec mariánsky">
+        <h3>Pestrec mariánsky<br>Milk Thistle</h3>
+        <p>Jemne horký a zemito orieškový.</p>
       </div>
       <div class="microgreen-card" data-modal="novy3-modal">
         <img src="novy3.jpg" alt="Nový produkt 3">
@@ -951,65 +941,7 @@ Vychutnajte si sviežosť a výživu v každom súste! 🥬✨</pre>
     </div>
   </div>
 
-  <div id="Pestrec mariánsky-modal" class="modal">
-    <div class="modal-content">
-      <span class="close-btn">×</span>
-      <h3>Benefity Pestreca mariánskeho (Milk Thistle)</h3>
-      <p>Pestrecové microgreens sú jemné a výživné, vhodné ako súčasť vyváženej stravy. 🌱
-
-🔬 Výživové hodnoty (na 100 g – orientačné hodnoty):*
-✅ Kalórie: 28 kcal
-✅ Bielkoviny: 2,8 g
-✅ Sacharidy: 5,1 g
-✅ Vláknina: 3,2 g
-✅ Tuky: 0,4 g
-
-Hodnoty sa môžu líšiť v závislosti od podmienok pestovania.
-
-🟢 Vitamíny v pestrecových microgreens:
-• 🌞 Vitamín E – prispieva k ochrane buniek pred oxidačným stresom.
-• 🩸 Vitamín K – prispieva k normálnej zrážanlivosti krvi.
-• ⚡ Vitamín B-komplex – prispievajú k normálnemu energetickému metabolizmu.
-
-🔵 Minerály v pestrecových microgreens:
-• 💪 Železo – prispieva k normálnej tvorbe červených krviniek.
-• ❤️ Draslík – prispieva k udržaniu normálneho krvného tlaku.
-• ⚡ Horčík – prispieva k normálnej činnosti svalov.
-• 🧠 Mangán – prispieva k normálnemu metabolizmu živín.
-
-🟠 Ďalšie prospešné látky:
-• 🌿 Silymarín – prírodný komplex flavonoidov známy svojimi vlastnosťami.
-• 🧪 Antioxidanty – chránia bunky pred oxidačným stresom.
-• 💧 Chlorofyl – prispieva k normálnej funkcii buniek.
-
-💡 Prečo zaradiť pestrecové microgreens do stravy?
-✅ Vitamín E a antioxidanty – prispievajú k ochrane buniek.
-🌱 Vláknina – podporuje zdravú črevnú mikroflóru.
-⚡ Horčík a vitamíny B – prispievajú k normálnej činnosti nervového systému.
-
-👉 Tip:
-Pestrecové microgreens sú univerzálne! Vyskúšajte ich:
-• 🍵 V bylinných čajoch – pridajte čerstvé listy do zeleného čaju.
-• 🥗 V šalátoch – kombinujte s rukolou, granátovým jablkom a orechmi.
-• 🥤 V detoxikačných smoothies – zmiešajte s ananásom a špenátom.
-• 🍲 Do polievok – posypte na vrch pred podávaním.
-• 🧴 V domácich pestových pestách – pridajte do hummusu aleba avokádového dipu.
-
-⚠️ Alergény:
-Pestrec mariánsky nie je zoznamovaný medzi 14 hlavných alergénov EÚ. V ojedinelých prípadoch môže u citlivých osôb vyvolať reakcie.
-
-🔎 Dôležité upozornenie:
-Uvedené tvrdenia o príspevku vitamínov a minerálov k funkcii organizmu sú schválené Európskou úniou (pozri nariadenie (ES) č. 1924/2006). Tieto informácie nenahradzujú odborné zdravotné poradenstvo. V prípade pochybností konzultujte odborníka.
-
-✅ Súlad s EÚ:
-Všetky zdravotné tvrdenia sú overené v registri EÚ.
-
-Výživové údaje sú uvedené podľa nariadenia (EÚ) č. 1169/2011.
-
-Oživte svoju stravu prírodnou silou pestreca! 🌿✨</p>
-    </div>
-  </div>
-
+  
   <!-- Modálne okná pre nové produkty -->
   <div id="Čínska kapusta-modal" class="modal">
     <div class="modal-content">
@@ -1071,11 +1003,62 @@ Výživové údaje sú uvedené podľa nariadenia (EÚ) č. 1169/2011.
 Zažite sviežosť ázijských chutí s každým sústrom! 🥢✨</pre>
     </div>
   </div>
-  <div id="novy2-modal" class="modal">
+  <div id="Pestrec mariánsky-modal" class="modal">
     <div class="modal-content">
       <span class="close-btn">×</span>
-      <h3>Benefity Nový produkt 2</h3>
-      <pre>Informácie o Nový produkt 2 budú dostupné čoskoro.</pre>
+      <h3>Benefity Pestreca mariánskeho (Milk Thistle)</h3>
+      <pre>Pestrec mariánsky je jemný a výživný, vhodný ako súčasť vyváženej stravy. 🌱
+
+🔬 Výživové hodnoty (na 100 g – orientačné hodnoty):*
+✅ Kalórie: 28 kcal
+✅ Bielkoviny: 2,8 g
+✅ Sacharidy: 5,1 g
+✅ Vláknina: 3,2 g
+✅ Tuky: 0,4 g
+
+Hodnoty sa môžu líšiť v závislosti od podmienok pestovania.
+
+🟢 Vitamíny v pestrecových microgreens:
+• 🌞 Vitamín E – prispieva k ochrane buniek pred oxidačným stresom.
+• 🩸 Vitamín K – prispieva k normálnej zrážanlivosti krvi.
+• ⚡ Vitamín B-komplex – prispievajú k normálnemu energetickému metabolizmu.
+
+🔵 Minerály v pestrecových microgreens:
+• 💪 Železo – prispieva k normálnej tvorbe červených krviniek.
+• ❤️ Draslík – prispieva k udržaniu normálneho krvného tlaku.
+• ⚡ Horčík – prispieva k normálnej činnosti svalov.
+• 🧠 Mangán – prispieva k normálnemu metabolizmu živín.
+
+🟠 Ďalšie prospešné látky:
+• 🌿 Silymarín – prírodný komplex flavonoidov známy svojimi vlastnosťami.
+• 🧪 Antioxidanty – chránia bunky pred oxidačným stresom.
+• 💧 Chlorofyl – prispieva k normálnej funkcii buniek.
+
+💡 Prečo zaradiť pestrecové microgreens do stravy?
+✅ Vitamín E a antioxidanty – prispievajú k ochrane buniek.
+🌱 Vláknina – podporuje zdravú črevnú mikroflóru.
+⚡ Horčík a vitamíny B – prispievajú k normálnej činnosti nervového systému.
+
+👉 Tip:
+Pestrecové microgreens sú univerzálne! Vyskúšajte ich:
+• 🍵 V bylinných čajoch – pridajte čerstvé listy do zeleného čaju.
+• 🥗 V šalátoch – kombinujte s rukolou, granátovým jablkom a orechmi.
+• 🥤 V detoxikačných smoothies – zmiešajte s ananásom a špenátom.
+• 🍲 Do polievok – posypte na vrch pred podávaním.
+• 🧴 V domácich pestových pestách – pridajte do hummusu aleba avokádového dipu.
+
+⚠️ Alergény:
+Pestrec mariánsky nie je zoznamovaný medzi 14 hlavných alergénov EÚ. V ojedinelých prípadoch môže u citlivých osôb vyvolať reakcie.
+
+🔎 Dôležité upozornenie:
+Uvedené tvrdenia o príspevku vitamínov a minerálov k funkcii organizmu sú schválené Európskou úniou (pozri nariadenie (ES) č. 1924/2006). Tieto informácie nenahradzujú odborné zdravotné poradenstvo. V prípade pochybností konzultujte odborníka.
+
+✅ Súlad s EÚ:
+Všetky zdravotné tvrdenia sú overené v registri EÚ.
+
+Výživové údaje sú uvedené podľa nariadenia (EÚ) č. 1169/2011.
+
+Oživte svoju stravu prírodnou silou pestreca! 🌿✨</pre>
     </div>
   </div>
   <div id="novy3-modal" class="modal">
