--- a/index.html
+++ b/index.html
@@ -1007,7 +1007,7 @@ Zažite sviežosť ázijských chutí s každým sústrom! 🥢✨</pre>
     <div class="modal-content">
       <span class="close-btn">×</span>
       <h3>Benefity Pestreca mariánskeho (Milk Thistle)</h3>
-      <pre>Pestrec mariánsky je jemný a výživný, vhodný ako súčasť vyváženej stravy. 🌱
+      <pre>Pestrecové microgreens sú jemné a výživné, vhodné ako súčasť vyváženej stravy. 🌱
 
 🔬 Výživové hodnoty (na 100 g – orientačné hodnoty):*
 ✅ Kalórie: 28 kcal
@@ -1030,7 +1030,7 @@ Hodnoty sa môžu líšiť v závislosti od podmienok pestovania.
 • 🧠 Mangán – prispieva k normálnemu metabolizmu živín.
 
 🟠 Ďalšie prospešné látky:
-• 🌿 Silymarín – prírodný komplex flavonoidov známy svojimi vlastnosťami.
+• 🌿 Silymarín – prírodný komplex flavonoidov, ktorý prispieva k prirodzenej ochrane pečene a podporuje detoxikačné procesy*.
 • 🧪 Antioxidanty – chránia bunky pred oxidačným stresom.
 • 💧 Chlorofyl – prispieva k normálnej funkcii buniek.
 
@@ -1038,6 +1038,7 @@ Hodnoty sa môžu líšiť v závislosti od podmienok pestovania.
 ✅ Vitamín E a antioxidanty – prispievajú k ochrane buniek.
 🌱 Vláknina – podporuje zdravú črevnú mikroflóru.
 ⚡ Horčík a vitamíny B – prispievajú k normálnej činnosti nervového systému.
+🍃 Silymarín – známy svojimi vlastnosťami, ktoré prispievajú k prirodzeným detoxikačným procesom organizmu*.
 
 👉 Tip:
 Pestrecové microgreens sú univerzálne! Vyskúšajte ich:
@@ -1051,14 +1052,14 @@ Pestrecové microgreens sú univerzálne! Vyskúšajte ich:
 Pestrec mariánsky nie je zoznamovaný medzi 14 hlavných alergénov EÚ. V ojedinelých prípadoch môže u citlivých osôb vyvolať reakcie.
 
 🔎 Dôležité upozornenie:
-Uvedené tvrdenia o príspevku vitamínov a minerálov k funkcii organizmu sú schválené Európskou úniou (pozri nariadenie (ES) č. 1924/2006). Tieto informácie nenahradzujú odborné zdravotné poradenstvo. V prípade pochybností konzultujte odborníka.
+Uvedené tvrdenia o príspevku vitamínov a minerálov k funkcii organizmu sú schválené Európskou úniou (pozri nariadenie (ES) č. 1924/2006). Špecifické účinky silymarínu na pečeň nie sú schválené ako zdravotné tvrdenia. Tieto informácie nenahradzujú odborné zdravotné poradenstvo. V prípade pochybností konzultujte odborníka.
 
 ✅ Súlad s EÚ:
 Všetky zdravotné tvrdenia sú overené v registri EÚ.
 
 Výživové údaje sú uvedené podľa nariadenia (EÚ) č. 1169/2011.
 
-Oživte svoju stravu prírodnou silou pestreca! 🌿✨</pre>
+Oživte svoju stravu prírodnou silou pestreca a podporte prirodzené detoxikačné procesy! 🌿✨</pre>
     </div>
   </div>
   <div id="novy3-modal" class="modal">
