--- a/index.html
+++ b/index.html
@@ -335,10 +335,10 @@
         <h3>Pestrec mariánsky<br>Milk Thistle</h3>
         <p>Jemne horký a zemito orieškový.</p>
       </div>
-      <div class="microgreen-card" data-modal="novy3-modal">
-        <img src="novy3.jpg" alt="Nový produkt 3">
-        <h3>Nový produkt 3</h3>
-        <p>Krátky popis produktu 3.</p>
+      <div class="microgreen-card" data-modal="Kukurica-modal">
+        <img src="novy3.jpg" alt="Kukurica">
+        <h3>Kukurica<br>PopCorn</h3>
+        <p>Sladkastá a jemná, s jemnou kukuričnou príchuťou.</p>
       </div>
       <div class="microgreen-card" data-modal="novy4-modal">
         <img src="novy4.jpg" alt="Nový produkt 4">
@@ -946,7 +946,7 @@ Vychutnajte si sviežosť a výživu v každom súste! 🥬✨</pre>
   <div id="Čínska kapusta-modal" class="modal">
     <div class="modal-content">
       <span class="close-btn">×</span>
-      <h3>Benefity Čínskek kapusty (Pak Choi)</h3>
+      <h3>Benefity Čínskej kapusty (Pak Choi)</h3>
       <pre>Čínska kapusta (Pak Choi) s jemnou chuťou a chrumkavou štruktúrou je výživovou bombou vhodnou ako súčasť vyváženej stravy. 🌱
 
 🔬 Výživové hodnoty (na 100 g – orientačné hodnoty):*
@@ -1062,11 +1062,64 @@ Výživové údaje sú uvedené podľa nariadenia (EÚ) č. 1169/2011.
 Oživte svoju stravu prírodnou silou pestreca a podporte prirodzené detoxikačné procesy! 🌿✨</pre>
     </div>
   </div>
-  <div id="novy3-modal" class="modal">
+  <div id="Kukurica-modal" class="modal">
     <div class="modal-content">
       <span class="close-btn">×</span>
-      <h3>Benefity Nový produkt 3</h3>
-      <pre>Informácie o Nový produkt 3 budú dostupné čoskoro.</pre>
+      <h3>Benefity Kukuričných Microgreens (PopCorn)</h3>
+      <pre>Kukuričné microgreens majú jemnú sladkastú chuť a sú výživnou prídavou k vyváženej strave. 🌱
+
+🔬 Výživové hodnoty (na 100 g – orientačné hodnoty):*
+✅ Kalórie: 30 kcal
+✅ Bielkoviny: 2,5 g
+✅ Sacharidy: 6,0 g
+✅ Vláknina: 2,5 g
+✅ Tuky: 0,3 g
+
+Hodnoty sa môžu líšiť v závislosti od podmienok pestovania.
+
+🟢 Vitamíny v kukuričných microgreens:
+• 🌞 Vitamín A – prispieva k udržaniu normálneho videnia.
+• 🛡️ Vitamín C – prispieva k ochrane buniek pred oxidačným stresom.
+• ⚡ Vitamín B1 (tiamín) – prispieva k normálnemu energetickému metabolizmu.
+• 🔋 Vitamín B2 (riboflavín) – prispieva k normálnej tvorbe červených krviniek.
+
+🔵 Minerály v kukuričných microgreens:
+• 💪 Horčík – prispieva k normálnej činnosti svalov.
+• ❤️ Draslík – prispieva k udržaniu normálneho krvného tlaku.
+• 🩸 Železo – prispieva k normálnej tvorbe červených krviniek.
+• 🧠 Fosfor – prispieva k udržaniu normálneho stavu kostí.
+
+🟠 Ďalšie prospešné látky:
+• 🌿 Vláknina – prispieva k normálnej činnosti tráviaceho systému.
+• 🧪 Antioxidanty – chránia bunky pred oxidačným stresom.
+• 🌽 Beta-karotén – prispieva k normálnej funkcii imunitného systému.
+
+💡 Prečo zaradiť kukuričné microgreens do stravy?
+✅ Vitamín C a antioxidanty – prispievajú k ochrane buniek.
+🌱 Vláknina – podporuje zdravú črevnú mikroflóru.
+⚡ Horčík a vitamíny B – prispievajú k normálnej činnosti nervového systému.
+🌞 Beta-karotén – prispieva k normálnej funkcii imunitného systému.
+
+👉 Tip:
+Kukuričné microgreens sú univerzálne! Vyskúšajte ich:
+• 🥗 V šalátoch – kombinujte s avokádom, cherry paradajkami a kukuricou.
+• 🥤 V smoothies – zmiešajte s banánom a kokosovým mliekom.
+• 🍲 V polievkach – posypte na kukuricovú aleba zeleninovú krémovú polievku.
+• 🌮 V mexických jedlách – pridajte do tacos aleba quesadillas.
+• 🧀 Ako ozdobu – doplňte ich k grilovanej zelenine aleba rybe.
+
+⚠️ Alergény:
+Kukurica nie je zoznamovaná medzi 14 hlavných alergénov EÚ. V ojedinelých prípadoch môže u citlivých osôb vyvolať reakcie.
+
+🔎 Dôležité upozornenie:
+Uvedené tvrdenia o príspevku vitamínov a minerálov k funkcii organizmu sú schválené Európskou úniou (pozri nariadenie (ES) č. 1924/2006). Tieto informácie nenahradzujú odborné zdravotné poradenstvo. V prípade pochybností konzultujte odborníka.
+
+✅ Súlad s EÚ:
+Všetky zdravotné tvrdenia sú overené v registri EÚ.
+
+Výživové údaje sú uvedené podľa nariadenia (EÚ) č. 1169/2011.
+
+Vychutnajte si sladkú jemnosť a výživové benefity v každom súste! 🌽✨</pre>
     </div>
   </div>
   <div id="novy4-modal" class="modal">
