--- a/index.html
+++ b/index.html
@@ -340,10 +340,10 @@
         <h3>Kukurica<br>PopCorn</h3>
         <p>Sladkastá a jemná, s jemnou kukuričnou príchuťou.</p>
       </div>
-      <div class="microgreen-card" data-modal="novy4-modal">
-        <img src="novy4.jpg" alt="Nový produkt 4">
-        <h3>Nový produkt 4</h3>
-        <p>Krátky popis produktu 4.</p>
+      <div class="microgreen-card" data-modal="Pohánka-modal">
+        <img src="novy4.jpg" alt="Pohánka">
+        <h3>Pohánka<br>Buckwheat</h3>
+        <p>Jemne kyslastá a svieža, s hladkou orechovou príchuťou.</p>
       </div>
       <div class="microgreen-card" data-modal="novy5-modal">
         <img src="novy5.jpg" alt="Nový produkt 5">
@@ -1122,11 +1122,62 @@ Výživové údaje sú uvedené podľa nariadenia (EÚ) č. 1169/2011.
 Vychutnajte si sladkú jemnosť a výživové benefity v každom súste! 🌽✨</pre>
     </div>
   </div>
-  <div id="novy4-modal" class="modal">
+  <div id="Pohánka-modal" class="modal">
     <div class="modal-content">
       <span class="close-btn">×</span>
-      <h3>Benefity Nový produkt 4</h3>
-      <pre>Informácie o Nový produkt 4 budú dostupné čoskoro.</pre>
+      <h3>Benefity Pohánky (Buckwheat)</h3>
+      <pre>Pohánkové microgreens majú jemnú orechovú chuť a sú výživovo bohaté, vhodné ako súčasť vyváženej stravy. 🌱
+
+🔬 Výživové hodnoty (na 100 g – orientačné hodnoty):*
+✅ Kalórie: 32 kcal
+✅ Bielkoviny: 3,2 g
+✅ Sacharidy: 5,8 g
+✅ Vláknina: 3,5 g
+✅ Tuky: 0,4 g
+
+Hodnoty sa môžu líšiť v závislosti od podmienok pestovania.
+
+🟢 Vitamíny v pohánkových microgreens:
+• 🌞 Vitamín E – prispieva k ochrane buniek pred oxidačným stresom.
+• 🛡️ Vitamín C – prispieva k normálnej funkcii imunitného systému.
+• ⚡ Vitamín B-komplex – prispievajú k normálnemu energetickému metabolizmu.
+
+🔵 Minerály v pohánkových microgreens:
+• 💪 Horčík – prispieva k normálnej činnosti svalov.
+• ❤️ Draslík – prispieva k udržaniu normálneho krvného tlaku.
+• 🩸 Železo – prispieva k normálnej tvorbe červených krviniek.
+• 🧠 Mangán – prispieva k normálnemu metabolizmu živín.
+
+🟠 Ďalšie prospešné látky:
+• 🌿 Rutín – flavonoid známy svojimi vlastnosťami, ktorý prispieva k prirodzenej elasticite ciev*.
+• 🧪 Antioxidanty – chránia bunky pred oxidačným stresom.
+• 🌾 Vláknina – podporuje zdravú črevnú mikroflóru.
+
+💡 Prečo zaradiť pohánkové microgreens do stravy?
+✅ Rutín a antioxidanty – prispievajú k ochrane buniek a cievneho systému*.
+🌱 Vláknina – podporuje normálnu činnosť tráviaceho systému.
+⚡ Vitamíny B a horčík – prispievajú k normálnej činnosti nervového systému.
+
+👉 Tip:
+Pohánkové microgreens sú univerzálne! Vyskúšajte ich:
+• 🥗 V šalátoch – kombinujte s jablkom, vlašskými orechmi a kozím syrom.
+• 🥤 V zelených smoothies – zmiešajte s špenátom, banánom a mandľovým mliekom.
+• 🍲 V zeleninových polievkach – posypte na krémovú tekvicovú aleba paradajkovú polievku.
+• 🥑 Na avokádový toast – doplňte vajcom pošírovaným a sezamovými semienkami.
+• 🌯 V wrapoch – pridajte k grilovanej zelenine a hummusu.
+
+⚠️ Alergény:
+Pohánka nie je zoznamovaná medzi 14 hlavných alergénov EÚ a je prirodzene bezlepková. V ojedinelých prípadoch môže u citlivých osôb vyvolať reakcie.
+
+🔎 Dôležité upozornenie:
+Uvedené tvrdenia o príspevku vitamínov a minerálov k funkcii organizmu sú schválené Európskou úniou (pozri nariadenie (ES) č. 1924/2006). Špecifické účinky rutínu na cievny systém nie sú schválené ako zdravotné tvrdenia. Tieto informácie nenahradzujú odborné zdravotné poradenstvo. V prípade pochybností konzultujte odborníka.
+
+✅ Súlad s EÚ:
+Všetky zdravotné tvrdenia sú overené v registri EÚ.
+
+Výživové údaje sú uvedené podľa nariadenia (EÚ) č. 1169/2011.
+
+Vychutnajte si orechovú jemnosť a výživové benefity v každom súste! 🌰✨</pre>
     </div>
   </div>
   <div id="novy5-modal" class="modal">
