--- a/index.html
+++ b/index.html
@@ -345,10 +345,10 @@
         <h3>Pohánka<br>Buckwheat</h3>
         <p>Jemne kyslastá a svieža, s hladkou orechovou príchuťou.</p>
       </div>
-      <div class="microgreen-card" data-modal="novy5-modal">
-        <img src="novy5.jpg" alt="Nový produkt 5">
-        <h3>Nový produkt 5</h3>
-        <p>Krátky popis produktu 5.</p>
+      <div class="microgreen-card" data-modal="Žerucha-modal">
+        <img src="novy5.jpg" alt="Žerucha">
+        <h3>Žerucha<br>Cress</h3>
+        <p>Pikantná a svieža, s výraznou horčicovou príchuťou.</p>
       </div>
       <div class="microgreen-card" data-modal="novy6-modal">
         <img src="novy6.jpg" alt="Nový produkt 6">
@@ -1180,11 +1180,64 @@ Výživové údaje sú uvedené podľa nariadenia (EÚ) č. 1169/2011.
 Vychutnajte si orechovú jemnosť a výživové benefity v každom súste! 🌰✨</pre>
     </div>
   </div>
-  <div id="novy5-modal" class="modal">
+  <div id="Žerucha-modal" class="modal">
     <div class="modal-content">
       <span class="close-btn">×</span>
-      <h3>Benefity Nový produkt 5</h3>
-      <pre>Informácie o Nový produkt 5 budú dostupné čoskoro.</pre>
+      <h3>Benefity Žeruchy (Cress)</h3>
+      <pre>Žeruchové microgreens majú štipľavú, sviežu chuť a sú plné živín, vhodné ako súčasť vyváženej stravy. 🌱
+
+🔬 Výživové hodnoty (na 100 g – orientačné hodnoty):*
+✅ Kalórie: 32 kcal
+✅ Bielkoviny: 2,9 g
+✅ Sacharidy: 5,5 g
+✅ Vláknina: 3,0 g
+✅ Tuky: 0,4 g
+
+Hodnoty sa môžu líšiť v závislosti od podmienok pestovania.
+
+🟢 Vitamíny v žeruchových microgreens:
+• 🌞 Vitamín C – prispieva k ochrane buniek pred oxidačným stresom.
+• 🩸 Vitamín K – prispieva k normálnej zrážanlivosti krvi.
+• 👁️ Vitamín A – prispieva k udržaniu normálneho videnia.
+• ⚡ Vitamíny B-komplex – prispievajú k normálnemu energetickému metabolizmu.
+
+🔵 Minerály v žeruchových microgreens:
+• 💪 Vápnik – prispieva k udržaniu normálneho stavu kostí.
+• ❤️ Draslík – prispieva k udržaniu normálneho krvného tlaku.
+• 🩸 Železo – prispieva k normálnej tvorbe červených krviniek.
+• ⚡ Horčík – prispieva k normálnej činnosti svalov.
+
+🟠 Ďalšie prospešné látky:
+• 🌿 Chlorofyl – prispieva k normálnej funkcii buniek.
+• 🧪 Antioxidanty (luteín, zeaxantín) – chránia bunky pred oxidačným stresom.
+• 💧 Glukozinoláty – prispievajú k prirodzeným detoxikačným procesom*.
+
+💡 Prečo zaradiť žeruchové microgreens do stravy?
+✅ Vitamín C a antioxidanty – prispievajú k ochrane buniek.
+🌱 Vláknina – podporuje zdravú črevnú mikroflóru.
+👁️ Vitamín A a luteín – prispievajú k normálnej funkcii očí.
+⚡ Horčík a vitamíny B – prispievajú k normálnej činnosti nervového systému.
+
+👉 Tip:
+Žeruchové microgreens sú univerzálne! Vyskúšajte ich:
+• 🥗 V šalátoch – kombinujte s vajcom, šalátom a jogurtovým dresingom.
+• 🥪 V sendvičoch – pridajte k avokádu a krútenej šunke.
+• 🍲 V zeleninových polievkach – posypte na hrachovú aleba zeleninovú krému.
+• 🥑 Ako ozdobu – doplňte ich k pomazánkam aleba grilovanej zelenine.
+• 🥤 V zelených šťavách – zmiešajte s jablkom a mrkvou.
+
+⚠️ Alergény:
+Žerucha patrí medzi brukvovité rastliny (čeľaď Brassicaceae). Nie je zoznamovaná medzi 14 hlavných alergénov EÚ, ale môže vyvolať reakcie u citlivých osôb.
+
+🔎 Dôležité upozornenie:
+Uvedené tvrdenia o príspevku vitamínov a minerálov k funkcii organizmu sú schválené Európskou úniou (pozri nariadenie (ES) č. 1924/2006). Špecifické účinky glukozinolátov nie sú schválené ako zdravotné tvrdenia. Tieto informácie nenahradzujú odborné zdravotné poradenstvo. V prípade pochybností konzultujte odborníka.
+
+✅ Súlad s EÚ:
+Všetky zdravotné tvrdenia sú overené v registri EÚ.
+
+Výživové údaje sú uvedené podľa nariadenia (EÚ) č. 1169/2011.
+
+Pridajte si štipľavú sviežosť a výživu do každej porcie! 🌶️✨</pre>
     </div>
   </div>
   <div id="novy6-modal" class="modal">
