--- a/index.html
+++ b/index.html
@@ -350,10 +350,10 @@
         <h3>Žerucha<br>Cress</h3>
         <p>Pikantná a svieža, s výraznou horčicovou príchuťou.</p>
       </div>
-      <div class="microgreen-card" data-modal="novy6-modal">
-        <img src="novy6.jpg" alt="Nový produkt 6">
-        <h3>Nový produkt 6</h3>
-        <p>Krátky popis produktu 6.</p>
+      <div class="microgreen-card" data-modal="Senovka grécka-modal">
+        <img src="novy6.jpg" alt="Senovka grécka">
+        <h3>Senovka grécka<br>Fenugreek </h3>
+        <p>Jemne horká a korenistá, s tónmi javorového sirupu.</p>
       </div>
       <div class="microgreen-card" data-modal="novy7-modal">
         <img src="novy7.jpg" alt="Nový produkt 7">
@@ -1240,11 +1240,64 @@ Výživové údaje sú uvedené podľa nariadenia (EÚ) č. 1169/2011.
 Pridajte si štipľavú sviežosť a výživu do každej porcie! 🌶️✨</pre>
     </div>
   </div>
-  <div id="novy6-modal" class="modal">
+  <div id="Senovka grécka" class="modal">
     <div class="modal-content">
       <span class="close-btn">×</span>
-      <h3>Benefity Nový produkt 6</h3>
-      <pre>Informácie o Nový produkt 6 budú dostupné čoskoro.</pre>
+      <h3>Benefity Senovky gréckej (Fenugreek)</h3>
+      <pre>Senovkové microgreens majú jemnú sladkastú až orechovú chuť a sú výživovo bohaté, vhodné ako súčasť vyváženej stravy. 🌱
+
+🔬 Výživové hodnoty (na 100 g – orientačné hodnoty):*
+✅ Kalórie: 36 kcal
+✅ Bielkoviny: 3,5 g
+✅ Sacharidy: 6,2 g
+✅ Vláknina: 3,8 g
+✅ Tuky: 0,5 g
+
+Hodnoty sa môžu líšiť v závislosti od podmienok pestovania.
+
+🟢 Vitamíny v senovkových microgreens:
+• 🌞 Vitamín A – prispieva k udržaniu normálneho videnia.
+• 🛡️ Vitamín C – prispieva k ochrane buniek pred oxidačným stresom.
+• 🩸 Vitamín K – prispieva k normálnej zrážanlivosti krvi.
+• ⚡ Vitamíny B-komplex – prispievajú k normálnemu energetickému metabolizmu.
+
+🔵 Minerály v senovkových microgreens:
+• 💪 Železo – prispieva k normálnej tvorbe červených krviniek.
+• ❤️ Draslík – prispieva k udržaniu normálneho krvného tlaku.
+• ⚡ Horčík – prispieva k normálnej činnosti svalov.
+• 🦴 Vápnik – prispieva k udržaniu normálneho stavu kostí.
+
+🟠 Ďalšie prospešné látky:
+• 🌿 Vláknina – prispieva k normálnej činnosti tráviaceho systému.
+• 🧪 Antioxidanty (flavonoidy) – chránia bunky pred oxidačným stresom.
+• 🌱 Diosgénin – prírodná látka známa svojimi vlastnosťami*.
+
+💡 Prečo zaradiť senovkové microgreens do stravy?
+✅ Vitamín C a antioxidanty – prispievajú k ochrane buniek.
+🌱 Vláknina – podporuje zdravú črevnú mikroflóru.
+⚡ Horčík a vitamíny B – prispievajú k normálnej činnosti nervového systému.
+💪 Železo a vápnik – prispievajú k normálnej tvorbe krvi a kostí.
+
+👉 Tip:
+Senovkové microgreens sú univerzálne! Vyskúšajte ich:
+• 🍛 V indických jedlách – pridajte do curry, dalu aleba čatní.
+• 🥗 V šalátoch – kombinujte s cícorkou, uhorkou a jogurtovým dresingom.
+• 🍲 V polievkach – posypte na šošovicovú aleba zeleninovú polievku.
+• 🍵 V bylinných čajoch – pridajte čerstvé listy pre jemnú arómu.
+• 🌯 V wrapoch – doplňte k grilovanej zelenine a hummusu.
+
+⚠️ Alergény:
+Senovka grécka patrí medzi strukoviny (čeľaď Fabaceae). Nie je zoznamovaná medzi 14 hlavných alergénov EÚ, ale môže vyvolať reakcie u citlivých osôb, najmä pri alergii na strukoviny.
+
+🔎 Dôležité upozornenie:
+Uvedené tvrdenia o príspevku vitamínov a minerálov k funkcii organizmu sú schválené Európskou úniou (pozri nariadenie (ES) č. 1924/2006). Špecifické účinky diosgéninu nie sú schválené ako zdravotné tvrdenia. Tieto informácie nenahradzujú odborné zdravotné poradenstvo. V prípade pochybností konzultujte odborníka.
+
+✅ Súlad s EÚ:
+Všetky zdravotné tvrdenia sú overené v registri EÚ.
+
+Výživové údaje sú uvedené podľa nariadenia (EÚ) č. 1169/2011.
+
+Vychutnajte si exotickú arómu a výživové benefity v každom súste! 🌿✨</pre>
     </div>
   </div>
   <div id="novy7-modal" class="modal">
