--- a/index.html
+++ b/index.html
@@ -355,10 +355,10 @@
         <h3>Senovka grécka<br>Fenugreek </h3>
         <p>Jemne horká a korenistá, s tónmi javorového sirupu.</p>
       </div>
-      <div class="microgreen-card" data-modal="novy7-modal">
-        <img src="novy7.jpg" alt="Nový produkt 7">
-        <h3>Nový produkt 7</h3>
-        <p>Krátky popis produktu 7.</p>
+      <div class="microgreen-card" data-modal="Kel červený-modal">
+        <img src="novy7.jpg" alt="Červený ruský kel">
+        <h3>Červený ruský kel<br>Kale, Red Russian</h3>
+        <p>Jemný a mierne sladkastý, s nádychom kapustovej chuti.</p>
       </div>
       <div class="microgreen-card" data-modal="novy8-modal">
         <img src="novy8.jpg" alt="Nový produkt 8">
@@ -1300,11 +1300,64 @@ Výživové údaje sú uvedené podľa nariadenia (EÚ) č. 1169/2011.
 Vychutnajte si exotickú arómu a výživové benefity v každom súste! 🌿✨</pre>
     </div>
   </div>
-  <div id="novy7-modal" class="modal">
+  <div id="Červený ruský kel-modal" class="modal">
     <div class="modal-content">
       <span class="close-btn">×</span>
-      <h3>Benefity Nový produkt 7</h3>
-      <pre>Informácie o Nový produkt 7 budú dostupné čoskoro.</pre>
+      <h3>Benefity Červeného ruského kelu (Kale, Red Russian)</h3>
+      <pre>Červený ruský kel microgreens majú jemnú sladkastú chuť s náznakom orechov a sú plné živín, vhodné ako súčasť vyváženej stravy. 🌱
+
+🔬 Výživové hodnoty (na 100 g – orientačné hodnoty):*
+✅ Kalórie: 35 kcal
+✅ Bielkoviny: 3,0 g
+✅ Sacharidy: 5,5 g
+✅ Vláknina: 3,5 g
+✅ Tuky: 0,4 g
+
+Hodnoty sa môžu líšiť v závislosti od podmienok pestovania.
+
+🟢 Vitamíny v microgreens červenej ruskej kapusty:
+• 🌞 Vitamín A – prispieva k udržaniu normálneho videnia.
+• 🛡️ Vitamín C – prispieva k ochrane buniek pred oxidačným stresom.
+• 🩸 Vitamín K – prispieva k normálnej zrážanlivosti krvi.
+• ⚡ Vitamín B6 – prispieva k normálnej funkcii imunitného systému.
+
+🔵 Minerály v microgreens červenej ruskej kapusty:
+• 💪 Vápnik – prispieva k udržaniu normálneho stavu kostí.
+• ❤️ Draslík – prispieva k udržaniu normálneho krvného tlaku.
+• 🩸 Železo – prispieva k normálnej tvorbe červených krviniek.
+• ⚡ Horčík – prispieva k normálnej činnosti svalov.
+
+🟠 Ďalšie prospešné látky:
+• 🌿 Chlorofyl – prispieva k normálnej funkcii buniek.
+• 🧪 Antioxidanty (kvercetín, luteín) – chránia bunky pred poškodením.
+• 🌱 Glukozinoláty – prispievajú k prirodzeným detoxikačným procesom*.
+
+💡 Prečo zaradiť červenú ruskú kapustu do stravy?
+✅ Vitamín C a antioxidanty – prispievajú k ochrane buniek.
+🌱 Vláknina – podporuje zdravú črevnú mikroflóru.
+❤️ Draslík a horčík – prispievajú k normálnej činnosti srdca a svalov.
+🦴 Vápnik a vitamín K – prispievajú k udržaniu zdravých kostí.
+
+👉 Tip:
+Červená ruská kapusta microgreens sú univerzálne! Vyskúšajte ich:
+• 🥗 V šalátoch – kombinujte s jablkom, sušenými brusnicami a kozím syrom.
+• 🥤 V zelených smoothies – zmiešajte s banánom, špenátom a mandľovým mliekom.
+• 🍲 V polievkach – posypte na dýňovú aleba zemiakovú krémovú polievku.
+• 🍳 Ako ozdobu – doplňte ich k vajíčkám Benedict aleba avokádovému toastu.
+• 🌯 V wrapoch – pridajte k grilovanej zelenine a fazuľovej pasté.
+
+⚠️ Alergény:
+Červený ruský kel patrí medzi brukvovité rastliny (čeľaď Brassicaceae). Nie je zoznamovaná medzi 14 hlavných alergénov EÚ, ale môže vyvolať reakcie u citlivých osôb.
+
+🔎 Dôležité upozornenie:
+Uvedené tvrdenia o príspevku vitamínov a minerálov k funkcii organizmu sú schválené Európskou úniou (pozri nariadenie (ES) č. 1924/2006). Špecifické účinky glukozinolátov nie sú schválené ako zdravotné tvrdenia. Tieto informácie nenahradzujú odborné zdravotné poradenstvo. V prípade pochybností konzultujte odborníka.
+
+✅ Súlad s EÚ:
+Všetky zdravotné tvrdenia sú overené v registri EÚ.
+
+Výživové údaje sú uvedené podľa nariadenia (EÚ) č. 1169/2011.
+
+Vychutnajte si sladkú jemnosť a výživovú silu v každom súste! 🥬✨</pre>
     </div>
   </div>
   <div id="novy8-modal" class="modal">
