--- a/index.html
+++ b/index.html
@@ -1240,7 +1240,7 @@ Výživové údaje sú uvedené podľa nariadenia (EÚ) č. 1169/2011.
 Pridajte si štipľavú sviežosť a výživu do každej porcie! 🌶️✨</pre>
     </div>
   </div>
-  <div id="Senovka grécka" class="modal">
+  <div id="Senovka grécka-modal" class="modal">
     <div class="modal-content">
       <span class="close-btn">×</span>
       <h3>Benefity Senovky gréckej (Fenugreek)</h3>
