--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
         <h3>Senovka grécka<br>Fenugreek </h3>
         <p>Jemne horká a korenistá, s tónmi javorového sirupu.</p>
       </div>
-      <div class="microgreen-card" data-modal="Kel červený-modal">
+      <div class="microgreen-card" data-modal="Červený ruský kel-modal">
         <img src="novy7.jpg" alt="Červený ruský kel">
         <h3>Červený ruský kel<br>Kale, Red Russian</h3>
         <p>Jemný a mierne sladkastý, s nádychom kapustovej chuti.</p>
