--- a/index.html
+++ b/index.html
@@ -360,10 +360,10 @@
         <h3>Červený ruský kel<br>Kale, Red Russian</h3>
         <p>Jemný a mierne sladkastý, s nádychom kapustovej chuti.</p>
       </div>
-      <div class="microgreen-card" data-modal="novy8-modal">
-        <img src="novy8.jpg" alt="Nový produkt 8">
-        <h3>Nový produkt 8</h3>
-        <p>Krátky popis produktu 8.</p>
+      <div class="microgreen-card" data-modal="Repa-modal">
+        <img src="novy8.jpg" alt="Repa">
+        <h3>Repa<br>Turnip</h3>
+        <p>Jemne pikantná a svieža, s jemnou reďkovkovou príchuťou.</p>
       </div>
       <div class="microgreen-card" data-modal="novy9-modal">
         <img src="novy9.jpg" alt="Nový produkt 9">
@@ -1360,11 +1360,64 @@ Výživové údaje sú uvedené podľa nariadenia (EÚ) č. 1169/2011.
 Vychutnajte si sladkú jemnosť a výživovú silu v každom súste! 🥬✨</pre>
     </div>
   </div>
-  <div id="novy8-modal" class="modal">
+  <div id="Repa-modal" class="modal">
     <div class="modal-content">
       <span class="close-btn">×</span>
-      <h3>Benefity Nový produkt 8</h3>
-      <pre>Informácie o Nový produkt 8 budú dostupné čoskoro.</pre>
+      <h3>Benefity Repy (Turnip)</h3>
+      <pre>Repové microgreens majú jemnú, mierne korenistú chuť a sú plné živín, vhodné ako súčasť vyváženej stravy. 🌱
+
+🔬 Výživové hodnoty (na 100 g – orientačné hodnoty):*
+✅ Kalórie: 30 kcal
+✅ Bielkoviny: 2,8 g
+✅ Sacharidy: 5,0 g
+✅ Vláknina: 3,2 g
+✅ Tuky: 0,3 g
+
+Hodnoty sa môžu líšiť v závislosti od podmienok pestovania.
+
+🟢 Vitamíny v kvakových microgreens:
+• 🌞 Vitamín C – prispieva k ochrane buniek pred oxidačným stresom.
+• 🩸 Vitamín K – prispieva k normálnej zrážanlivosti krvi.
+• 👁️ Vitamín A – prispieva k udržaniu normálneho videnia.
+• ⚡ Vitamíny B-komplex – prispievajú k normálnemu energetickému metabolizmu.
+
+🔵 Minerály v kvakových microgreens:
+• 💪 Vápnik – prispieva k udržaniu normálneho stavu kostí.
+• ❤️ Draslík – prispieva k udržaniu normálneho krvného tlaku.
+• 🩸 Železo – prispieva k normálnej tvorbe červených krviniek.
+• ⚡ Horčík – prispieva k normálnej činnosti svalov.
+
+🟠 Ďalšie prospešné látky:
+• 🌿 Chlorofyl – prispieva k normálnej funkcii buniek.
+• 🧪 Glukozinoláty – prispievajú k prirodzeným detoxikačným procesom*.
+• 🔥 Antioxidanty (vitamín C, beta-karotén) – chránia bunky pred poškodením.
+
+💡 Prečo zaradiť kvakové microgreens do stravy?
+✅ Vitamín C a antioxidanty – prispievajú k ochrane buniek.
+🌱 Vláknina – podporuje zdravú črevnú mikroflóru.
+❤️ Draslík a horčík – prispievajú k normálnej činnosti srdca a svalov.
+🦴 Vápnik a vitamín K – prispievajú k udržaniu zdravých kostí.
+
+👉 Tip:
+Kvakové microgreens sú univerzálne! Vyskúšajte ich:
+• 🥗 V šalátoch – kombinujte s jablkom, hruškou a oregánom.
+• 🍲 V zeleninových polievkach – posypte na mrkvovú aleba zemiakovú krému.
+• 🥪 V sendvičoch – pridajte k avokádu a šunke.
+• 🍳 Ako ozdobu – doplňte ich k grilovanej rybe aleba tofu.
+• 🥤 V zelených šťavách – zmiešajte s jablkom a špenátom.
+
+⚠️ Alergény:
+Repa patrí medzi brukvovité rastliny (čeľaď Brassicaceae). Nie je zoznamovaná medzi 14 hlavných alergénov EÚ, ale môže vyvolať reakcie u citlivých osôb.
+
+🔎 Dôležité upozornenie:
+Uvedené tvrdenia o príspevku vitamínov a minerálov k funkcii organizmu sú schválené Európskou úniou (pozri nariadenie (ES) č. 1924/2006). Špecifické účinky glukozinolátov nie sú schválené ako zdravotné tvrdenia. Tieto informácie nenahradzujú odborné zdravotné poradenstvo. V prípade pochybností konzultujte odborníka.
+
+✅ Súlad s EÚ:
+Všetky zdravotné tvrdenia sú overené v registri EÚ.
+
+Výživové údaje sú uvedené podľa nariadenia (EÚ) č. 1169/2011.
+
+Vychutnajte si jemnú korenistú chuť a výživové benefity v každom súste! 🥕✨</pre>
     </div>
   </div>
   <div id="novy9-modal" class="modal">
