--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
         <p>Jemne korenistá a chrumkavá, s osviežujúcou chuťou.</p>
       </div>
       <div class="microgreen-card" data-modal="Pestrec mariánsky-modal">
-        <img src="novy2.jpg" alt="Pestrec mariánsky">
+        <img src="Pestrec mariánsky.jpg" alt="Pestrec mariánsky">
         <h3>Pestrec mariánsky<br>Milk Thistle</h3>
         <p>Jemne horký a zemito orieškový.</p>
       </div>
