--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
 
       <!-- Nové produkty -->
       <div class="microgreen-card" data-modal="Čínska kapusta-modal">
-        <img src="novy1.jpg" alt="Čínska kapusta">
+        <img src="PakChoi.jpg" alt="Čínska kapusta">
         <h3>Čínska kapusta<br>Pak Choi</h3>
         <p>Jemne korenistá a chrumkavá, s osviežujúcou chuťou.</p>
       </div>
@@ -336,12 +336,12 @@
         <p>Jemne horký a zemito orieškový.</p>
       </div>
       <div class="microgreen-card" data-modal="Kukurica-modal">
-        <img src="novy3.jpg" alt="Kukurica">
+        <img src="PopCorn.jpg" alt="Kukurica">
         <h3>Kukurica<br>PopCorn</h3>
         <p>Sladkastá a jemná, s jemnou kukuričnou príchuťou.</p>
       </div>
       <div class="microgreen-card" data-modal="Pohánka-modal">
-        <img src="novy4.jpg" alt="Pohánka">
+        <img src="Buckwheat.jpg" alt="Pohánka">
         <h3>Pohánka<br>Buckwheat</h3>
         <p>Jemne kyslastá a svieža, s hladkou orechovou príchuťou.</p>
       </div>
