--- a/index.html
+++ b/index.html
@@ -346,12 +346,12 @@
         <p>Jemne kyslastá a svieža, s hladkou orechovou príchuťou.</p>
       </div>
       <div class="microgreen-card" data-modal="Žerucha-modal">
-        <img src="novy5.jpg" alt="Žerucha">
+        <img src="Cress.jpg" alt="Žerucha">
         <h3>Žerucha<br>Cress</h3>
         <p>Pikantná a svieža, s výraznou horčicovou príchuťou.</p>
       </div>
       <div class="microgreen-card" data-modal="Senovka grécka-modal">
-        <img src="novy6.jpg" alt="Senovka grécka">
+        <img src="Fenugreek.jpg" alt="Senovka grécka">
         <h3>Senovka grécka<br>Fenugreek </h3>
         <p>Jemne horká a korenistá, s tónmi javorového sirupu.</p>
       </div>
