--- a/index.html
+++ b/index.html
@@ -356,12 +356,12 @@
         <p>Jemne horká a korenistá, s tónmi javorového sirupu.</p>
       </div>
       <div class="microgreen-card" data-modal="Červený ruský kel-modal">
-        <img src="novy7.jpg" alt="Červený ruský kel">
+        <img src="Kale Red.jpg" alt="Červený ruský kel">
         <h3>Červený ruský kel<br>Kale, Red Russian</h3>
         <p>Jemný a mierne sladkastý, s nádychom kapustovej chuti.</p>
       </div>
       <div class="microgreen-card" data-modal="Repa-modal">
-        <img src="novy8.jpg" alt="Repa">
+        <img src="Turnip.jpg" alt="Repa">
         <h3>Repa<br>Turnip</h3>
         <p>Jemne pikantná a svieža, s jemnou reďkovkovou príchuťou.</p>
       </div>
