--- a/index.html
+++ b/index.html
@@ -365,10 +365,10 @@
         <h3>Repa<br>Turnip</h3>
         <p>Jemne pikantná a svieža, s jemnou reďkovkovou príchuťou.</p>
       </div>
-      <div class="microgreen-card" data-modal="novy9-modal">
-        <img src="novy9.jpg" alt="Nový produkt 9">
-        <h3>Nový produkt 9</h3>
-        <p>Krátky popis produktu 9.</p>
+      <div class="microgreen-card" data-modal="Lupina-modal">
+        <img src="Lupine Red.jpg" alt="Nový produkt 9">
+        <h3>Lupina<br>Lupine</h3>
+        <p>Jemne horká a oriešková, s bohatou zemitou chuťou.</p>
       </div>
       <div class="microgreen-card" data-modal="novy10-modal">
         <img src="novy10.jpg" alt="Nový produkt 10">
@@ -1420,11 +1420,63 @@ Výživové údaje sú uvedené podľa nariadenia (EÚ) č. 1169/2011.
 Vychutnajte si jemnú korenistú chuť a výživové benefity v každom súste! 🥕✨</pre>
     </div>
   </div>
-  <div id="novy9-modal" class="modal">
+  <div id="Lupina-modal" class="modal">
     <div class="modal-content">
       <span class="close-btn">×</span>
-      <h3>Benefity Nový produkt 9</h3>
-      <pre>Informácie o Nový produkt 9 budú dostupné čoskoro.</pre>
+      <h3>Benefity Lupíny (Lupine)</h3>
+      <pre>Lupínové microgreens majú jemnú orechovú chuť a sú výnimočne bohaté na bielkoviny, vhodné ako súčasť vyváženej stravy. 🌱
+
+🔬 Výživové hodnoty (na 100 g – orientačné hodnoty*):
+✅ Kalórie: 35 kcal
+✅ Bielkoviny: 3,8 g
+✅ Sacharidy: 5,5 g
+✅ Vláknina: 3,5 g
+✅ Tuky: 0,5 g
+
+Hodnoty sa môžu líšiť v závislosti od podmienok pestovania.
+
+🟢 Vitamíny v lupínových microgreens:
+• 🌞 Vitamín A – prispieva k udržaniu normálneho videnia.
+• 🛡️ Vitamín C – prispieva k ochrane buniek pred oxidačným stresom.
+• ⚡ Vitamíny B1, B2, B6 – prispievajú k normálnemu energetickému metabolizmu.
+
+🔵 Minerály v lupínových microgreens:
+• 💪 Železo – prispieva k normálnej tvorbe červených krviniek.
+• ❤️ Draslík – prispieva k udržaniu normálneho krvného tlaku.
+• ⚡ Horčík – prispieva k normálnej činnosti svalov.
+• 🦴 Vápnik – prispieva k udržaniu normálneho stavu kostí.
+
+🟠 Ďalšie prospešné látky:
+• 🌿 Vysoký obsah bielkovín – vhodné pre vegetariánov a vegánov.
+• 🧪 Antioxidanty – chránia bunky pred poškodením.
+• 💧 Chlorofyl – prispieva k normálnej funkcii buniek.
+
+💡 Prečo zaradiť lupínové microgreens do stravy?
+✅ Bielkoviny a vláknina – podporujú sýtosť a zdravé trávenie.
+🌱 Vitamín C a antioxidanty – prispievajú k ochrane imunitného systému.
+⚡ Horčík a vitamíny B – podporujú energiu a nervový systém.
+
+👉 Tip:
+Lupínové microgreens sú univerzálne! Vyskúšajte ich v neotvorených kombináciách:
+• 🥙 V mediteránskych jedlách – pridajte do falafelov, halloumi šalátov aleba tzatziki.
+• 🍚 V zeleninových bowloch – kombinujte s quinou, pečenou zeleninou a tahini omáčkou.
+• 🥑 V avokádových toastoch – posypte spolu s chia semienkami a červenou paprikou.
+• 🌶️ V pikantných dipoch – zmiešajte s jogurtom, cesnakom a čili.
+• 🍝 V cestovinových šalátoch – pridajte k celozrnným penne a sušeným paradličkam.
+• 🍛 V indických karí – doplňte ich k špenátovému paneeru aleba cícorkovému dalu.
+
+⚠️ Alergény:
+Lupína patrí medzi silné alergény podľa nariadenia EÚ č. 1169/2011. Môže vyvolať alergické reakcie u citlivých osôb.
+
+🔎 Dôležité upozornenie:
+Uvedené tvrdenia o príspevku vitamínov a minerálov k funkcii organizmu sú schválené Európskou úniou (pozri nariadenie (ES) č. 1924/2006). Tieto informácie nenahradzujú odborné zdravotné poradenstvo. V prípade pochybností konzultujte odborníka.
+
+✅ Súlad s EÚ:
+Všetky zdravotné tvrdenia sú overené v registri EÚ.
+
+Výživové údaje sú uvedené podľa nariadenia (EÚ) č. 1169/2011.
+
+Objavte svet výživy s orechovou jemnosťou lupínových microgreens! 🌰🚀</pre>
     </div>
   </div>
   <div id="novy10-modal" class="modal">
